feat: Add configurable baseline computation methods v4.3.0
- Add --baseline-method CLI option with choices: peakutils (default) and mean
- Support both signal trough detection (peakutils) and signal averaging (mean) for baseline computation
- Add task-specific warnings recommending mean method for resting-state CVR analysis
- Integrate baseline_method configuration option in default_config.yaml
- Update PhysioPreprocessor and ROIProbeExtractor to support configurable baseline computation
- Fix ROI probe mode to properly bypass physiological file checks
- Enhance JSON sidecars with dynamic baseline method documentation
- Update README with comprehensive baseline computation methods documentation
- Bump version to 4.3.0 across all components

--- a/cvrmap/default_config.yaml
+++ b/cvrmap/default_config.yaml
@@ -1,6 +1,9 @@
 physio:
   raw_co2_light_smoothing: 0.06  # seconds
   peak_detection_smoothing: 0.8   # seconds
+  baseline_method: peakutils  # Method for computing probe baseline: 'peakutils' (default) or 'mean'
+                              # peakutils: Uses peakutils to detect baseline from signal troughs (recommended for gas challenge)
+                              # mean: Uses the mean of the entire probe signal (recommended for resting-state)
 
 cross_correlation:
   delay_max: 30.0  # maximum delay for cross-correlation analysis in seconds
@@ -10,7 +13,7 @@ delay:
 
 bold:
   denoising:
-    aroma_correlation_threshold: 0.5  # correlation threshold for AROMA component refinement
+    aroma_correlation_threshold: 0.6  # correlation threshold for AROMA component refinement
   temporal_filtering:
     sigma: 63.0 # sigma for temporal filtering in seconds
   spatial_smoothing:
